<resources>
    <string name="action_account_properties">View</string>
    <string name="action_banchan">Ban from current channel</string>
    <string name="action_banchan_short">Ban Channel</string>
    <string name="action_banned_users">Banned Users</string>
    <string name="action_bansrv">Ban from server</string>
    <string name="action_bansrv_short">Ban</string>
    <string name="action_broadcast">Broadcast Message</string>
    <string name="action_connect">Connect</string>
    <string name="action_createchannel">Create</string>
    <string name="action_delete">Delete</string>
    <string name="action_deselect">Deselect For Move</string>
    <string name="action_deselect_all">Deselect All</string>
    <string name="action_edit">Edit Channel</string>
    <string name="action_editsrv">Edit server</string>
    <string name="action_edituser">User properties</string>
    <string name="action_enter_joincode">Enter Join Code</string>
    <string name="action_exit">Exit</string>
    <string name="action_export_serverlist">Export server list</string>
    <string name="action_export_tt">Export .tt</string>
    <string name="action_exportsrv">Export server</string>
    <string name="action_import_serverlist">Import from a .tt File</string>
    <string name="action_join">Join</string>
    <string name="action_join_channel">Join Channel</string>
    <string name="action_kickchan">Kick from current channel</string>
    <string name="action_kickchan_short">Kick Channel</string>
    <string name="action_kicksrv">Kick from server</string>
    <string name="action_kicksrv_short">Kick</string>
    <string name="action_leave">Leave Channel</string>
    <string name="action_make_operator">Grant Operator</string>
    <string name="action_message">Messages</string>
    <string name="action_move">Move Here</string>
    <string name="action_new_channel">New Channel</string>
    <string name="action_new_server">New Server</string>
    <string name="action_open_channel">Open Channel</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_removesrv">Remove server</string>
    <string name="action_revoke_operator">Revoke Operator</string>
    <string name="action_save">Save</string>
    <string name="action_select">Select For Move</string>
    <string name="action_select_all">Select All</string>
    <string name="action_server_properties">Server Properties</string>
    <string name="action_server_stats">Server Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="action_start_recording">Start recording</string>
    <string name="action_stop">Stop</string>
    <string name="action_stop_recording">Stop recording</string>
    <string name="action_stream">Stream a media file</string>
    <string name="action_unban">Unban</string>
    <string name="action_updatechannel">Update</string>
    <string name="action_upload">Upload File</string>
    <string name="action_user_accounts">User Accounts</string>
    <string name="action_view_account">View Account</string>
    <string name="alert_file_override">File %1$s already exists. Override it?</string>
    <string name="all_users_channel_movement_title">All users channel movement</string>
    <string name="anonymous_account">Anonymous</string>
    <string name="antispam_re_enable_msg">Anti-Spam has disabled your subscriptions. Re-enable them in Settings → Anti-Spam or reconnect.</string>
    <string name="antispam_re_enable_title">Anti-Spam Re-enable</string>
    <string name="antispam_triggered">Anti-Spam: message limit exceeded (%d/s). Subscriptions disabled.</string>
    <string name="app_name">ttpro+</string>
    <string name="back_to_channel">Back to: %s</string>
    <string name="ban_confirmation">Do you really wish to ban user %1$s?</string>
    <string name="ban_info_fmt">"Time: %1$s
Type: %2$s
By: %3$s"</string>
    <string name="ban_type_channel">Channel</string>
    <string name="ban_type_ip">IP Address</string>
    <string name="ban_type_username">Username</string>
    <string name="bg_mgmt_permission_required">Overlay permission is required for background management</string>
    <string name="btn_add_op_channel">+</string>
    <string name="btn_add_user_account">Add User</string>
    <string name="btn_search_tt_files">Search .tt</string>
    <string name="btn_search_tt_files_desc">Search all folders for .tt files</string>
    <string name="btn_select_all">Select All</string>
    <string name="btn_select_none">Select None</string>
    <string name="btn_select_this_folder">Select This Folder</string>
    <string name="button_download">Download</string>
    <string name="button_msg">Message</string>
    <string name="button_remove">Remove</string>
    <string name="button_select_media_file">Browse</string>
    <string name="button_send">Send</string>
    <string name="button_stream_media_file">Stream</string>
    <string name="button_tx">TX</string>
    <string name="bwidlab">Username:</string>
    <string name="bwpswlab">Password:</string>
    <string name="cd_back">Go back</string>
    <string name="cd_file">file</string>
    <string name="cd_folder">folder</string>
    <string name="cd_tt_file">TeamTalk configuration file</string>
    <string name="cd_up_folder">Go up, folder</string>
    <string name="channamelab">"Channel's name:"</string>
    <string name="channel_change_alert">All active transfers will be stopped when switching a channel</string>
    <string name="channel_password_prompt">Enter channel password</string>
    <string name="channel_prop_title_classroom">Classroom</string>
    <string name="channel_prop_title_diskquota">Disk Quota (KBytes)</string>
    <string name="channel_prop_title_hiddenchannel">Hidden</string>
    <string name="channel_prop_title_maxusers">Max Users</string>
    <string name="channel_prop_title_name">Name</string>
    <string name="channel_prop_title_noaudiorecord">No Audio Recording</string>
    <string name="channel_prop_title_nointerrupt">No Interruptions</string>
    <string name="channel_prop_title_novoiceact">No Voice Activation</string>
    <string name="channel_prop_title_op_password">Op Password</string>
    <string name="channel_prop_title_oprecvonly">Operator Receives Only</string>
    <string name="channel_prop_title_password">Password</string>
    <string name="channel_prop_title_permanent">Permanent Channel</string>
    <string name="channel_prop_title_topic">Topic</string>
    <string name="channel_remove_confirmation">Do you really wish to remove channel %1$s?</string>
    <string name="chanoppswlab">"Operator's password:"</string>
    <string name="chanpswlab">"Channel's password:"</string>
    <string name="chantopiclab">"Channel's topic:"</string>
    <string name="chat_dialog_title">Select Chat</string>
    <string name="chat_no_online_users">No users online</string>
    <string name="chat_option_broadcast">Broadcast Message</string>
    <string name="chat_option_global">Global Chat</string>
    <string name="chat_option_private">Private Chat</string>
    <string name="chat_select_user">Select User</string>
    <string name="choose_folder_method_custom">Custom File Manager</string>
    <string name="choose_folder_method_system">System File Manager</string>
    <string name="choose_folder_method_title">Choose Folder Selector</string>
    <string name="complete">Complete</string>
    <string name="custom_picker_title">Custom File Picker</string>
    <string name="default_">Default</string>
    <string name="default_port">10333</string>
    <string name="desc_btn_channels">Choose channel</string>
    <string name="desc_btn_chat">Choose chat type</string>
    <string name="desc_btn_mute">Toggle sound mute</string>
    <string name="desc_btn_servers">Servers</string>
    <string name="desc_btn_voice">Toggle voice transmission</string>
    <string name="desc_drag_handle">Drag control window</string>
    <string name="desc_floating_window">Floating control window</string>
    <string name="desc_seekbar_playback">Playback progress</string>
    <string name="desc_sound_active">Sound is active</string>
    <string name="filepathlab">File:</string>
    <string name="hint_filter_results">Filter results…</string>
    <string name="label_local_playback">Local Playback</string>
    <string name="pref_auto_record_conversations_summary">Start audio recording automatically when joining a channel</string>
    <string name="pref_auto_record_conversations_title">Auto-record conversations</string>
    <string name="pref_category_bg_mgmt_behavior">Behavior</string>
    <string name="pref_category_bg_mgmt_elements">Visible elements</string>
    <string name="pref_category_display_indicators">Indicators</string>
    <string name="pref_recording_format_summary">Choose recording file format</string>
    <string name="pref_recording_format_title">Audio Format</string>
    <string name="pref_recording_mp3_bitrate_summary">Select MP3 encoding quality</string>
    <string name="pref_recording_mp3_bitrate_title">MP3 Bitrate</string>
    <string name="pref_recording_path_summary">Choose folder for saving recordings</string>
    <string name="pref_recording_path_title">Recording Path</string>
    <string name="pref_recording_show_dialog_summary">Show a dialog to rename and configure the recording after stopping</string>
    <string name="pref_recording_show_dialog_title">Show dialog after recording</string>
    <string name="pref_summary_bg_mgmt_close_on_app_open">Close floating window when entering the app</string>
    <string name="pref_summary_bg_mgmt_enabled">Background control via floating window or notification</string>
    <string name="pref_summary_bg_mgmt_show_channels">Show channel selection button in floating window</string>
    <string name="pref_summary_display_show_mic_activity">Display microphone activity level above the sound settings</string>
    <string name="pref_summary_display_show_ping_no_server">Show ping indicator without entering a server</string>
    <string name="pref_title_bg_mgmt_close_on_app_open">Close on app open</string>
    <string name="pref_title_bg_mgmt_enabled">Enable background mode</string>
    <string name="pref_title_bg_mgmt_show_channels">Show Channels button</string>
    <string name="pref_title_bg_mgmt_show_chat">Chat button</string>
    <string name="pref_title_bg_mgmt_show_mute">Mute sound button</string>
    <string name="pref_title_bg_mgmt_show_ping">Ping and connection state</string>
    <string name="pref_title_bg_mgmt_show_voice">Voice control button</string>
    <string name="pref_title_display_show_mic_activity">Show microphone activity</string>
    <string name="pref_title_display_show_ping_no_server">Show ping without server</string>
    <string name="welcome_description">modification of the official teamtalk 5 client</string>
    <string name="welcome_features">"• Spam protection: automatically unsubscribes from spammers with configurable message limits
• Sound themes: customize sound events for actions, or use the silent mode
• Administration: manage accounts, banned users, and server settings like on PC
• Local playback: redesigned local audio player with easy playback control
• Other: rewritten screens and improved dark theme"</string>
    <string name="welcome_settings_description">Configure basic settings. You can change these later in preferences.</string>
    <string name="welcome_settings_gender_female">Female gender</string>
    <string name="welcome_settings_keep_screen">Keep screen on</string>
    <string name="welcome_settings_nickname_hint">Enter your nickname</string>
    <string name="welcome_settings_nickname_label">Nickname</string>
    <string name="welcome_settings_title">Basic Settings</string>
    <string name="welcome_settings_vibrate">Vibrate on voice transmission</string>
    <string name="welcome_title">Welcome to TeamTalk Pro+</string>
</resources>