<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="recording_format"
        android:title="@string/pref_recording_format_title"
        android:summary="@string/pref_recording_format_summary"
        android:entries="@array/recording_format_entries"
        android:entryValues="@array/recording_format_values"
        android:defaultValue="wav" />

    <ListPreference
        android:key="recording_mp3_bitrate"
        android:title="@string/pref_recording_mp3_bitrate_title"
        android:summary="@string/pref_recording_mp3_bitrate_summary"
        android:entries="@array/recording_mp3_bitrate_entries"
        android:entryValues="@array/recording_mp3_bitrate_values"
        android:defaultValue="128" />

    <Preference
        android:key="recording_path"
        android:title="@string/pref_recording_path_title"
        android:summary="@string/pref_recording_path_summary" />

    <CheckBoxPreference
        android:key="recording_show_dialog_after"
        android:defaultValue="true"
        android:title="@string/pref_recording_show_dialog_title"
        android:summary="@string/pref_recording_show_dialog_summary" />

    <CheckBoxPreference
        android:key="auto_record_conversations"
        android:defaultValue="false"
        android:title="@string/pref_auto_record_conversations_title"
        android:summary="@string/pref_auto_record_conversations_summary" />

</PreferenceScreen>
