<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="bg_mgmt_enabled"
        android:title="@string/pref_title_bg_mgmt_enabled"
        android:summary="@string/pref_summary_bg_mgmt_enabled"
        android:defaultValue="false" />

    <PreferenceCategory android:title="@string/pref_category_bg_mgmt_elements">
        <CheckBoxPreference
            android:key="bg_mgmt_show_voice"
            android:title="@string/pref_title_bg_mgmt_show_voice"
            android:defaultValue="true"
            android:dependency="bg_mgmt_enabled" />

        <CheckBoxPreference
            android:key="bg_mgmt_show_mute"
            android:title="@string/pref_title_bg_mgmt_show_mute"
            android:defaultValue="true"
            android:dependency="bg_mgmt_enabled" />

        <CheckBoxPreference
            android:key="bg_mgmt_show_ping"
            android:title="@string/pref_title_bg_mgmt_show_ping"
            android:defaultValue="true"
            android:dependency="bg_mgmt_enabled" />

        <CheckBoxPreference
            android:key="bg_mgmt_show_chat"
            android:title="@string/pref_title_bg_mgmt_show_chat"
            android:defaultValue="true"
            android:dependency="bg_mgmt_enabled" />

        <CheckBoxPreference
            android:key="bg_mgmt_show_channels"
            android:title="@string/pref_title_bg_mgmt_show_channels"
            android:summary="@string/pref_summary_bg_mgmt_show_channels"
            android:defaultValue="true"
            android:dependency="bg_mgmt_enabled" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_bg_mgmt_behavior">
        <CheckBoxPreference
            android:key="bg_mgmt_close_on_app_open"
            android:title="@string/pref_title_bg_mgmt_close_on_app_open"
            android:summary="@string/pref_summary_bg_mgmt_close_on_app_open"
            android:defaultValue="false"
            android:dependency="bg_mgmt_enabled" />
    </PreferenceCategory>
</PreferenceScreen>
